--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <input
               id="soKM"
               class="input100"
-              type="text"
+              type="number"
               name="name"
               placeholder="Số KM ..."
             />
@@ -111,7 +111,7 @@
             <input
               id="thoiGianCho"
               class="input100"
-              type="text"
+              type="number"
               name="name"
               placeholder="Thời gian chờ  ..."
             />
