--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                   <th>Chi Tiết</th>
                   <th>Sử dụng</th>
                   <th>Đơn giá</th>
-                  <th>Thời gian chờ</th>
-                  <th>Đơn giá thời gian chờ</th>
+                  <!-- <th>Thời gian chờ</th> -->
+                  <!-- <th>Đơn giá thời gian chờ</th> -->
                   <th>Thành tiền</th>
                 </tr>
               </thead>
