change file html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <input
               id="soKM"
               class="input100"
-              type="number"
+              type="text"
               name="name"
               placeholder="Số KM ..."
             />
@@ -111,7 +111,7 @@
             <input
               id="thoiGianCho"
               class="input100"
-              type="number"
+              type="text"
               name="name"
               placeholder="Thời gian chờ  ..."
             />
@@ -175,8 +175,6 @@
                   <th>Chi Tiết</th>
                   <th>Sử dụng</th>
                   <th>Đơn giá</th>
-                  <!-- <th>Thời gian chờ</th> -->
-                  <!-- <th>Đơn giá thời gian chờ</th> -->
                   <th>Thành tiền</th>
                 </tr>
               </thead>
